--- a/css/index.css
+++ b/css/index.css
@@ -121,13 +121,27 @@ form input{
     text-align: center;
     padding-top: 2rem;
     padding-bottom: 2rem;
-    margin-bottom: 3rem;
 }
 #courses-home{
     padding-top: 2rem;
     justify-content: center;
     align-items: center;
     margin-left: -7rem;
+}
+#th{
+    background-color: #cee6e4;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    height: 3rem;
+    align-items: center;
+    margin-top: 2rem;
+}
+#tr{
+    margin-left: 1rem;
+    margin-right: 1rem;
+    height: 3rem;
+    align-items: center;
+    margin-top: 2rem;
 }
 #btn1{
     background-color: #F1F7F7;
@@ -190,4 +204,7 @@ form input{
     -moz-border-radius: 15px;
     -ms-border-radius: 15px;
     -o-border-radius: 15px;
+}
+#search-review{
+    height: 2rem;
 }
